# ephios

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  manage.py  pyproject.toml
.github/: dependabot.yml  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/ci/: staging-inventory.yml
.github/workflows/: codeql-analysis.yml  docker.yml  publish.yml  pythonapp.yml  release-drafter.yml  staging.yml  tests.yml
contrib/: __init__.py  json.py  signals.py  signup.py  urls.py
contrib/signup/: confirm.py  instant.py
contrib/templates/jepcontrib/: signup_instant_state.html  signup_requestconfirm_disposition.html  signup_requestconfirm_state.html
deployment/compose/: docker-compose.yaml  nginx.conf
deployment/docker/: cron.sh  cronjob  docker-compose.yaml  entrypoint.sh  ephios-docker-defaults.env  ephios-docker.env  nginx.conf  supervisord.conf
deployment/docker-compose/: docker-compose.yml
docs/: changelog.rst  conf.py  index.rst  requirements.txt
docs/admin/: index.rst
docs/admin/additional_features/: index.rst  oidc.rst
docs/admin/configuration/: index.rst
docs/admin/deployment/: index.rst
docs/admin/installation/: index.rst
docs/api/: index.rst
docs/development/: contributing.rst  index.rst  plugin.rst
docs/development/plugins/: classes.rst  index.rst  introduction.rst  (+1 more)
docs/user/: index.rst
ephios/: __main__.py  asgi.py  settings.py  urls.py  wsgi.py
ephios/api/: apps.py  events.py  fields.py  filters.py  models.py  oauth2_urls.py  permissions.py  serializers.py  signals.py  urls.py
ephios/contrib/: __init__.py  signals.py  urls.py
ephios/core/: __init__.py  admin.py  apps.py  calendar.py  checks.py  consequences.py  context.py  customization.py  dynamic.py  dynamic_preferences_registry.py  ical.py  mail.py  pdf.py  plugins.py  signals.py  urls.py  utils.py  widgets.py
ephios/event_management/: __init__.py  admin.py  apps.py  dynamic_preferences_registry.py  forms.py  ical.py  mail.py  models.py  pdf.py  registries.py  signals.py  signup.py  urls.py  views.py
ephios/extra/: __init__.py  apps.py  auth.py  bootstrap.py  colors.py  context.py  crispy.py  dynamic_preferences_registry.py  fields.py  graphs.py  json.py  logging.py  middleware.py  mixins.py  permissions.py  preferences.py  relative_time.py  secrets.py  signals.py  utils.py  widgets.py
ephios/helpers/: __init__.py  context.py  json.py  permissions.py
ephios/modellogging/: __init__.py  fields.py  json.py  log.py  middleware.py  models.py  recorders.py
ephios/plugins/: __init__.py
ephios/templates/: 500.html  base.html  email_base.html  offline.html
ephios/user_management/: __init__.py  admin.py  apps.py  consequences.py  dynamic_preferences_registry.py  forms.py  ical.py  mail.py  models.py  pdf.py  signals.py  urls.py  utils.py  views.py  widgets.py
event_management/: admin.py  apps.py  forms.py  ical.py  mail.py  models.py  pdf.py  signup.py  urls.py  views.py
event_management/migrations/: 0001_initial.py  0002_auto_20200614_1858.py  0002_event_active.py  0002_localparticipation_user.py  0003_auto_20200825_1351.py  0004_auto_20200829_1535.py  0005_auto_20200829_2348.py  0006_auto_20200830_0116.py  0008_event_mail_updates.py
event_management/templatetags/: event_extras.py  service_extras.py
jep/: asgi.py  permissions.py  settings.py  urls.py  utils.py  widgets.py  wsgi.py
jep/management/: initial_data.py
service_management/: admin.py  apps.py  models.py  urls.py  views.py
service_management/migrations/: 0001_initial.py  0002_auto_20200517_0122.py  0003_auto_20200518_1937.py  0004_shift_meeting_time.py
service_management/templatetags/: service_extras.py
src/ephios/: __main__.py  settings.py  urls.py
static/js/: main.js
templates/: 400.html  403.html  404.html  500.html  base.html  email_base.html
templates/registration/: logged_out.html  login.html  new_account_email.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
tests/: conftest.py  settings.py  test_settings.py
tests/api/: test_event_list.py  test_oauth_views.py  test_participation_list.py  test_user.py  test_user_token.py
tests/core/: test_auth.py  test_consequences.py  test_daylight_savings.py  test_event_bulk_actions.py  test_event_calendar.py  test_event_copy.py  test_event_detail.py  test_event_form.py  test_event_list.py  test_event_notifications.py  test_ical.py  test_log.py  test_models.py  test_nav.py  test_notification_mass.py  test_notifications.py  test_pdf.py  test_plugins.py  test_qualification.py  test_setupdata.py  test_signup_methods.py  test_views_auth.py  test_views_event.py  test_views_group.py  test_views_healthcheck.py  test_views_pwa.py  test_views_settings.py  test_views_user_profile.py  test_views_userprofile.py  test_workinghours.py
tests/event_management/: test_event_bulk_actions.py  test_event_copy.py  test_event_form.py
tests/extra/: test_devdata.py  test_graphs.py  test_permissions.py  test_rich_text.py  test_settings.py  test_utils.py
tests/modellogging/: test_m2m_recorder.py  test_model_registration.py
tests/plugins/: test_requestconfirm_signup.py
tests/user_management/: test_consequences.py  test_event_bulk_actions.py  test_models.py  test_pdf.py  test_setupdata.py  test_signup_methods.py  test_views_auth.py  test_views_group.py  test_views_user_profile.py  test_views_userprofile.py  test_workinghours.py
user_management/: admin.py  forms.py  mail.py  models.py  urls.py  utils.py  views.py  widgets.py
user_management/migrations/: 0001_initial.py  0002_auto_20200518_1937.py  0002_initial_data.py  0002_initial_permissions.py  0002_userprofile_calendar_token.py  0003_initial_data.py  0003_userprofile_calendar_token.py  0004_auto_20200829_1535.py  0005_qualification_abbreviation.py  0006_auto_20200829_2348.py
(+1193 files in other folders)
